--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -206,11 +206,28 @@
     <Compile Include="Migrations\201707162118216_InitialModel.Designer.cs">
       <DependentUpon>201707162118216_InitialModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707162144044_AddIsSubscribedToCustomer.cs" />
+    <Compile Include="Migrations\201707162144044_AddIsSubscribedToCustomer.Designer.cs">
+      <DependentUpon>201707162144044_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707162150393_AddMembershipType.cs" />
+    <Compile Include="Migrations\201707162150393_AddMembershipType.Designer.cs">
+      <DependentUpon>201707162150393_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707162226354_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201707162226354_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201707162226354_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707162235217_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\201707162235217_ApplyAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>201707162235217_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -319,6 +336,18 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201707162118216_InitialModel.resx">
       <DependentUpon>201707162118216_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707162144044_AddIsSubscribedToCustomer.resx">
+      <DependentUpon>201707162144044_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707162150393_AddMembershipType.resx">
+      <DependentUpon>201707162150393_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707162226354_PopulateMembershipTypes.resx">
+      <DependentUpon>201707162226354_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707162235217_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>201707162235217_ApplyAnnotationsToCustomerName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
