--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -242,6 +242,14 @@
     <Compile Include="Migrations\201707170115022_Genres.Designer.cs">
       <DependentUpon>201707170115022_Genres.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707250105164_Error.cs" />
+    <Compile Include="Migrations\201707250105164_Error.Designer.cs">
+      <DependentUpon>201707250105164_Error.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707250137439_Error2.cs" />
+    <Compile Include="Migrations\201707250137439_Error2.Designer.cs">
+      <DependentUpon>201707250137439_Error2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -249,6 +257,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
+    <Compile Include="Models\Min18YearsIfAMember.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -389,6 +398,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707170115022_Genres.resx">
       <DependentUpon>201707170115022_Genres.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707250105164_Error.resx">
+      <DependentUpon>201707250105164_Error.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707250137439_Error2.resx">
+      <DependentUpon>201707250137439_Error2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
